random updates to overall application

--- a/Forum/appsettings.json
+++ b/Forum/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=forumdb;Username=dev_user;Password=dev_password;Encrypt=false"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=forumdb;Username=dev_user;Password=dev_password;Include Error Detail=true"
   },
   "Logging": {
     "LogLevel": {
